[workspace]
resolver = "2"
members = [
  "beacon-client",
  "beacon-api-types",
  "builder-api-types",
  "builder-client",
  "builder-server",
  "relay-api-types",
  "relay-client",
  "relay-server",
  "searcher-api-types",
  "searcher-client",
  "common"
]

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1.6"
eth2 = { git = "https://github.com/sigp/lighthouse.git", rev = "d96b73152e0e4bcedb8e747016ba8070029db50d" }
ethereum_serde_utils = "0.7"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
flate2 = "1.0"
futures = "0.3.30"
http = "1.2"
mediatype = "0.19.13"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
superstruct = "0.8"
tokio = { version = "1", default-features = false, features = ["signal", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24.0"
tracing = { version = "0.1", features = ["attributes"] }
types = { git = "https://github.com/sigp/lighthouse.git", rev = "d96b73152e0e4bcedb8e747016ba8070029db50d" }
rand = "0.8"
