[package]
name = "ethereum-apis-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
bytes.workspace = true
ethereum_ssz.workspace = true
flate2.workspace = true
http.workspace = true
mediatype.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
beacon-api-types = { path = "../beacon-api-types" }
