[package]
name = "relay-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
http.workspace = true
relay-api-types = { path = "../relay-api-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
types.workspace = true
