[package]
name = "searcher-api-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-mev.workspace = true
eyre.workspace = true
serde_with.workspace = true
