[package]
name = "searcher-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

alloy-rpc-types-mev.workspace = true
eyre.workspace = true
url.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client", "jsonrpsee-core"] }

searcher-api-types = { path = "../searcher-api-types" }
jsonrpsee-core.workspace = true

